internal/kubernetes/frontend/frontend.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: spotify
  name: spotify-deploy
spec:
  replicas: 1
  template:
    metadata:
      namespace: spotify
      labels:
        name: spotify-pods
    spec:
      containers:
        - image: cescoferraro/spotify:latest
          imagePullPolicy: Always
          name: frontend
