internal/kubernetes/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: spotify
  name: spotify-svc
spec:
  selector:
    name: spotify-pods
  ports:
  - name: web
    port: 5000
    targetPort: 5000
    protocol: TCP
